--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                 <div class="carousel-caption">
                       <h1>La API para entender a tus usuarios en servicios de atención al cliente</h1>
-                      <a class="btn btn-large btn-primary href="#">Probar</a>
+                      <a class="btn btn-large btn-primary" href="#">Probar</a>
                       <a id="solicitar1" class="btn btn-large btn-secondary" href="#">Solicitar</a>
                 </div>
 
