--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- SCRIPT 
     ============================================================-->  
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
       
       
