--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                 <div class="carousel-caption">
                       <h1>La API para entender a tus usuarios en servicios de atención al cliente</h1>
-                      <a class="btn btn-large btn-primary" href="#">Probar</a>
+                      <a href="test.html"class="btn btn-large btn-primary" href="#">Probar</a>
                       <a id="solicitar1" class="btn btn-large btn-secondary" href="#">Solicitar</a>
                 </div>
 
@@ -265,6 +265,7 @@
 <div class="container">
 <!-- /.Row View -->
 
+
 <div class="row feature-box">
 
 
@@ -329,6 +330,17 @@
     $('#solicitar1').on('click', function(){
     $("html, body").animate({ scrollTop: $('#solicitar2').offset().top }, 1000);
   })
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-81020325-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 
 
